<resources>
    <string name="app_name">Long Ring Long Land Gym</string>
    <string name="Username">Erabiltzailea:</string>
    <string name="Password">Pasahitza:</string>
    <string name="Login">Hasi saioa</string>
    <string name="logo">Logo</string>
    <string name="dark_mode">Modo oscuro</string>
    <string name="dark_mode_description">Aktibatu itzal modua</string>
    <string name="language">Hizkuntza</string>

    <!--Workout data-->
    <string name="workout_name">Izena</string>
    <string name="level">Maila</string>
    <string name="total_time">Denb guzt</string>
    <string name="expected_time">Aurre denb</string>
    <string name="date">Data</string>
    <string name="done_exercises_percent">Ariketak %</string>
    <string name="workout_video">Bideoa</string>

    <string name="btnLogin">Sartu</string>
    <string name="btnSignUp">Erregistratu</string>
    <string name="back">Atzera</string>

    <!--Register-->
    <string name="register_title">Erregistratu</string>
    <string name="register_username">Erabiltzaile izena:</string>
    <string name="register_lastname1">Lehenengo Abizena:</string>
    <string name="register_lastname2">Bigarren Abizena:</string>
    <string name="register_password">Pasahitza:</string>
    <string name="register_confirm_password">Pasahitza berretsi:</string>
    <string name="register_email">Emaila:</string>
    <string name="Client">Bezeroa</string>
    <string name="trainer">Entrenatzailea</string>
    <string name="register_btn">Erregistratu</string>
    <string name="logout">Saioa itxi</string>
    <string name="noHistoric">Ez dago workout honeko daturik</string>

    <string name="register_email_hint">email@gmail.com</string>

    <string name="select_birthdate">Aukeratu jaiotze data</string>
    <string name="select_birthdate_hint">Aukeratu jaiotze data</string>
    <string name="hello">Kaixo</string>
    <string name="hello_name">Kaixo %1$s</string>
    <string name="showPassword">Erakutsi</string>
    <string name="rememberMe">Gorde saioa</string>

    <string name="create_workout">Workout Berria</string>
    <string name="edit_workout">Editatu Workout</string>
    <string name="delete_workout">Ezabatu workout</string>
    <string name="order_arrow">Ordenatu</string>
    <string name="profile">Perfila</string>
    <string name="description">Deskribapena</string>

    <string name="confirm">Berretsi</string>
    <string name="cancel">Utzi</string>

    <string name="profile_edit">Perfila editatu</string>
    <string name="save_changes">Gorde aldaketak</string>
    <string name="training">Entrenamendua</string>

</resources>