<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="20dp"
      tools:layout_editor_absoluteX="-33dp"
      tools:layout_editor_absoluteY="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:id="@+id/tvTitleProfile"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginBottom="20dp"
          android:text="@string/profile_edit"
          android:textSize="30sp"
          android:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editTextName"
        android:text="@string/register_username"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editTextSurname"
        android:text="@string/register_lastname1"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextSurname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editTextSurname2"
        android:text="@string/register_lastname2"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextSurname2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:inputType="text" />

    <Button
        android:id="@+id/btnBirthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_birthdate" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvBirthdate"
        android:text="@string/showPassword"
        android:id="@+id/editTextBirthdate"
        />

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/save_changes"/>
    <Button
        android:id="@+id/btnBackProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/back"/>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>