<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:layout_margin="20dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvErregistratu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/register_title"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvErregistratu"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/register_username"
        android:labelFor="@+id/etUsername"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:inputType="text"/>

    <TextView
        android:id="@+id/tvLastname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/register_lastname1"
        android:labelFor="@+id/etLastname1"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/etLastname1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvLastname1"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="name"
        android:inputType="text"/>

    <TextView
        android:id="@+id/tvLastname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etLastname1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/register_lastname2"
        android:labelFor="@+id/etLastname2"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/etLastname2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvLastname2"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="name"
        android:inputType="text"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etLastname2"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/register_password"
        android:labelFor="@+id/etPassword"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="name"
        android:inputType="textPassword"/>



    <TextView
        android:id="@+id/tvPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/register_confirm_password"
        android:labelFor="@+id/etPasswordConfirm"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordConfirm"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="name"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPasswordConfirm"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/register_email"
        android:labelFor="@+id/etEmail"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="name"
        android:inputType="textEmailAddress"
        android:hint="@string/register_email_hint"/>

    <Button
        android:id="@+id/btnBirthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/select_birthdate"
        android:layout_marginTop="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tvBirthdate"
        android:text="@string/showPassword"
        android:id="@+id/tvBirthdate"
        />

    <RadioGroup
        android:id="@+id/rgBezeroaEntrenatzailea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Client"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rbTrainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trainer"
            android:layout_marginStart="10dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rgBezeroaEntrenatzailea"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/register_btn"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/back"
        android:layout_marginTop="16dp"/>

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>