<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llDarkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/dark_mode"
            android:contentDescription="@string/dark_mode_description"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                android:textColor="?attr/colorOnBackground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode_description"
                android:textSize="11sp" />

        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llDarkMode"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"/>
        </LinearLayout>
        <Spinner
            android:id="@+id/spLanguages"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnBackSettings"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llLanguages"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/back"/>
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llLanguages"
        app:layout_constraintStart_toEndOf="@+id/btnBackSettings"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/logout"/>
</androidx.constraintlayout.widget.ConstraintLayout>